--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,7 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.core:core-ktx:1.10.0'
+    implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1'
     implementation 'androidx.activity:activity-compose:1.7.0'
@@ -61,5 +61,6 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.4.1"
     debugImplementation "androidx.compose.ui:ui-tooling:1.4.1"
     debugImplementation "androidx.compose.ui:ui-test-manifest:1.4.1"
+    implementation "androidx.compose.material:material-icons-extended:1.4.2"
     implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.0"))
 }
